--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Binus EzyFoody Natashia Virnilia</string>
-    <string name="api_key">AIzaSyD5R6m-7M1h_jfB8H3WZTBnYX3deDn6UWk</string>
+    <string name="api_key"></string>
 
 </resources>
